Add a footer that links to the repo

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -66,7 +66,8 @@ window.onpopstate = function(event) {
     </header>
     <main id="mainContent">{{ block "main" . }}{{ end }}</main>
     <footer>
-      <!-- TODO -->
+      <a href="https://github.com/aarmea/mfw-singlepage">mfw-singlepage</a>
+      theme for <a href="https://gohugo.io">Hugo</a>
     </footer>
   </body>
 </html>
