--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -43,15 +43,17 @@ window.onload = function() {
     if (history === null)
       return;
 
-    // Async load is only safe on internal links
+    // External links should instead open in a new tab
     var newUrl = event.target.href;
     var domain = window.location.origin;
-    if (typeof domain !== "string" || newUrl.search(domain) !== 0)
-      return;
-
-    event.preventDefault();
-    loadPage(newUrl);
-    history.pushState(null /*stateObj*/, "" /*title*/, newUrl);
+    if (typeof domain !== "string" || newUrl.search(domain) !== 0) {
+      event.preventDefault();
+      window.open(newUrl, "_blank");
+    } else {
+      event.preventDefault();
+      loadPage(newUrl);
+      history.pushState(null /*stateObj*/, "" /*title*/, newUrl);
+    }
   });
 }
 
